feat: config, partial-sign, ticket status APIs
